# netbox-pyats

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_GAP_REPORT.md  GRAPHIFY.md  GRAPHIFY_MCP.md  LICENSE  README.md  conftest.py  docker-compose.dev.yml  docker-compose.graphify-mcp.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
dev/: Dockerfile.pyats-worker  pyats-entrypoint.sh  pyats-worker-entrypoint.sh
dev/configuration/: configuration.py
dev/graphify-mcp/: Dockerfile  entrypoint.sh  healthcheck.py
docs/: README.md  dev-bringup.md  graphify-mcp-http.md  workers.md
docs/adr/: 0001-plugin-layout.md  0002-graceful-degradation.md  0003-netbox46-migration-and-worker-toolchain.md  0004-compliance-comparison-shape.md  0004-compliance-golden-parse-shape.md  0005-pyatsjob-model.md  README.md
docs/developer/: ci.md  contributing.md  graphify-mcp-http.md  graphify-mcp.md  graphify.md  remote-access.md  setup.md
docs/user/: compliance.md  credentials.md  installation.md  troubleshooting.md  usage.md  workers.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
netbox_pyats/: __init__.py  capture.py  choices.py  compliance.py  crypto.py  diff.py  filtersets.py  forms.py  golden_parse.py  jobs.py  models.py  navigation.py  search.py  tables.py  template_content.py  testbed.py  urls.py  version.py  views.py
netbox_pyats/api/: serializers.py  urls.py  views.py
netbox_pyats/graphql/: schema.py
netbox_pyats/migrations/: 0001_initial.py  0002_pyatssnapshot.py  0003_pyatssnapshotdiff.py  0004_reconcile_netboxmodel_fields.py  0005_compliance_engine.py  0006_compliance_reland_parsed_os_setnull.py  0006_compliance_run_nullable_fks.py  0007_snapshot_parsed_os.py  0008_pyatssnapshotdiff_nullable_fks.py  0009_pyatsjob.py
netbox_pyats/templates/netbox_pyats/: device_bulk_capture.html  pyatscompliancerun.html  pyatscredential.html  pyatscredential_list.html  pyatsgoldenconfig.html  pyatsjob.html  pyatssnapshot.html  pyatssnapshotdiff.html  supported_platforms.html
netbox_pyats/templates/netbox_pyats/inc/: device_panel.html  diff_tree.html
netbox_pyats/tests/: test_api.py  test_capture.py  test_compliance.py  test_compliance_api.py  test_compliance_models.py  test_compliance_views.py  test_crypto.py  test_diff.py  test_golden_parse.py  test_jobs.py  test_model.py  test_models.py  test_pyatsjob.py  test_secret_detection.py  test_snapshots.py  test_supported_platforms.py  test_testbed.py  test_views.py
scripts/: dev-worktree.sh  graphify-mcp-key.sh
