[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-pyats"
version = "0.1.0"
description = "Atw NetBox plugin that brings Cisco PyATS/Genie into NetBox: dynamic testbed building, encrypted credentials, and (in later phases) device snapshots, structured diffs, and config compliance from the device page."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Atw", email = "engineering@atw.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
# Plugin runtime deps are intentionally minimal. `cryptography` is required for
# field-level credential encryption. `pyats[full]` is NOT a hard install-time
# dependency: it is heavy and pulls Cython binaries that may not match every
# NetBox deployment. Operators install pyats on the worker that runs snapshots
# (documented in README). The dynamic testbed builder imports pyATS lazily so
# the plugin remains importable in the NetBox web process without pyats.
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
pyats = [
    # Optional: install on the worker that runs snapshots/diffs/compliance.
    "pyats[full]>=26.0",
]
dev = [
    "black>=24.0,<25",
    "django>=4.2,<6",
    "flake8>=7.0,<8",
    "isort>=5.13,<6",
    "pytest>=8.0,<9",
    "pytest-django>=4.8,<5",
]

[project.entry-points."netbox.plugins"]
netbox_pyats = "netbox_pyats:config"

[tool.setuptools.packages.find]
include = ["netbox_pyats*"]

[tool.setuptools.package-data]
netbox_pyats = ["templates/netbox_pyats/**/*.html"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["netbox_pyats/tests"]